# esoteric-extras

./: LICENSE  README.md  esoteric-extras.cabal
src/: Esoteric.hs
src/Control/Applicative/: Esoteric.hs
src/Control/Arrow/: Esoteric.hs
src/Data/: SKey.hs
src/Data/Foldable/: Esoteric.hs
src/Data/Function/: Esoteric.hs
src/Data/Maybe/: Esoteric.hs  Extras.hs
