name:                esoteric-extras
version:             0.0.1.0
synopsis:            Miscellaneous extra functions
description:         Please see README.md
homepage:            https://github.com/louispan/esoteric-extras#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Data.Foldable.Esoteric
                       Data.Maybe.Esoteric
                       Data.SKey
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/esoteric-extras
